RESOLVED FIXED 81311
<content> in <meter> is not rendered correctly.
https://bugs.webkit.org/show_bug.cgi?id=81311
Summary <content> in <meter> is not rendered correctly.
Shinya Kawanaka
Reported 2012-03-15 23:06:47 PDT
The render object generated by <meter> having <content> differs from <meter> not having <content>
Attachments
Repro (1.20 KB, text/html)
2012-03-15 23:07 PDT, Shinya Kawanaka
no flags
Patch (3.83 KB, patch)
2012-04-06 03:19 PDT, Takashi Sakamoto
no flags
Shinya Kawanaka
Comment 1 2012-03-15 23:07:37 PDT
Created attachment 132205 [details] Repro place it in fast/dom/shadow
Takashi Sakamoto
Comment 2 2012-04-06 03:19:28 PDT
WebKit Review Bot
Comment 3 2012-04-08 21:59:45 PDT
Comment on attachment 135997 [details] Patch Clearing flags on attachment: 135997 Committed r113555: <http://trac.webkit.org/changeset/113555>
WebKit Review Bot
Comment 4 2012-04-08 21:59:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.