Source/WebCore/html/HTMLMeterElement.h
@@ -73,7 +73,6 @@ private:
     virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
     virtual bool childShouldCreateRenderer(const NodeRenderingContext&) const OVERRIDE;
     virtual void parseAttribute(Attribute*) OVERRIDE;
-    virtual void attach();
 
     void didElementStateChange();
     void createShadowSubtree();
